# fibonacci

./: README.md  setup.cfg
docs/: fib_rec_results.csv  fib_rec_results.xlsx
src/: fib.py  fib_cache.py  fib_recorder.py
src/fibonacci/: fib.py  fib_cache.py  fib_plotter.py  fib_recorder.py
