[metadata]
name = fibonacci
version = 0.1.2
author = Harrison Outram
description = A quick and dirty collection of Fibonacci examples
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Harrison-O/fibonacci
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Topic :: Education

[options]
package_dir =
    = src
packages = find:
python_requires >= 3.6

[options.packages.find]
where = src